# ai

./: README.md
agentic-ai-devs/crewai/hellocrew/: README.md
agentic-ai-devs/crewai/hellocrew/assistantcrew/: .gitignore  README.md  pyproject.toml
agentic-ai-devs/crewai/hellocrew/assistantcrew/src/assistantcrew/: crew.py  main.py
agentic-ai-devs/crewai/hellocrew/assistantcrew/src/assistantcrew/config/: agents.yaml  tasks.yaml
agentic-ai-devs/crewai/hellocrew/assistantcrew/src/assistantcrew/tools/: custom_tool.py
agentic-ai-devs/crewai/hellocrew/helloworld/: README.md  pyproject.toml
agentic-ai-devs/crewai/hellocrew/helloworld/src/helloworld/: crew.py  main.py
agentic-ai-devs/langgraph/docs/: setup.md
agentic-ai-devs/langgraph/notebooks/: HelloWorldGoogleGenai.ipynb  HelloWorldOpenAI.ipynb  external-tool-calling.ipynb  multi-agent-setup.ipynb
google/antigravity/: readme.md
google/antigravity/docs/: antigravity-setup.md
springai/: README.md
springai/assitant-agent/: README.md  build.gradle  settings.gradle
springai/assitant-agent/src/main/resources/: application.yaml
springai/graph-using-alibaba/: README.md  build.gradle  settings.gradle
springai/hello-spring-ai/: build.gradle
springai/helloworld/: README.md  build.gradle
springai/springai-mcp/: README.md  build.gradle  settings.gradle
springai/springai-rag/: README.md  build.gradle  settings.gradle
springai/springai-tools/: README.md  build.gradle  settings.gradle
springai/text-based-chat-loop/: README.md  build.gradle  settings.gradle
(+82 files in other folders)
