[project]
name = "assistantcrew"
version = "0.1.0"
description = "AssistantCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    #"crewai[tools]==1.14.5a2"
    "crewai[tools]==1.14.6"
]

[project.scripts]
assistantcrew = "assistantcrew.main:run"
run_crew = "assistantcrew.main:run"
train = "assistantcrew.main:train"
replay = "assistantcrew.main:replay"
test = "assistantcrew.main:test"
run_with_trigger = "assistantcrew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
