[project]
name = "helloworld"
version = "0.1.0"
description = "HelloWorld using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    #"crewai[tools]==1.14.5a2"
    "crewai[tools]==1.14.6"
]

[project.scripts]
helloworld = "helloworld.main:run"
run_crew = "helloworld.main:run"
train = "helloworld.main:train"
replay = "helloworld.main:replay"
test = "helloworld.main:test"
run_with_trigger = "helloworld.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
